# Big_data_application

./: .gitignore  Data-prep.ipynb  Data-prep.py  DataPreparation.py  Features-ingeneering.ipynb  Features-ingeneering.py  FeaturesIngeneering.py  MLproject  Predict.ipynb  Predict.py  README.md  Training-model.ipynb  Training-model.py  TrainingModel.py  conda.yaml  pyproject.toml  train_gradient_boosting.py
data/: eda.ipynb  y_test  y_test_ready  y_train  y_train_ready
data/mlruns/0/: meta.yaml
data/mlruns/1/: meta.yaml
docs/source/: conf.py  index.rst
mlflow/gradient_boosting/: MLproject  conda.yaml  train_gradient_boosting.py
mlflow/random_forest/: MLproject  conda.yaml  train_random_forest.py
mlflow/xgb/: MLproject  conda.yaml  train_xgb.py
mlruns/0/: meta.yaml
mlruns/0/03844cd6acc443d6b4bca495db759e2d/: meta.yaml
mlruns/0/123d652611d14746a2c63a30253c4af6/: meta.yaml
mlruns/0/1af929020fba4bc6b23eec8734076d2d/: meta.yaml
mlruns/0/1cd136556ecc40d89da13edd9e21db5d/: meta.yaml
mlruns/0/4197c1b58304417b88875955986fe4fa/: meta.yaml
mlruns/0/523bac4eaf844b179c0ddb0a6372dd63/: meta.yaml
mlruns/0/55804f8397804a378330779a1714b0ce/: meta.yaml
mlruns/0/724d08e2536e437fba8cbe0dd4455661/: meta.yaml
mlruns/0/9b37cf31c2ed449db4ee4a1ac3fe44e1/: meta.yaml
model/: Model_XGboost  gbc
notebook/: Data-prep.ipynb  Features-ingeneering.ipynb  Predict.ipynb  Training-model-shap-explanation.ipynb  Training-model-shap.ipynb  Training-model.ipynb  model-explanation.ipynb
source/: DataPreparation.rst  FeaturesIngeneering.rst  conf.py  index.rst  modules.rst
(+143 files in other folders)
