[tool.poetry]
name = "big_data_application"
version = "0.1.0"
description = "big data application project"
authors = ["matthieu <matthieu.eccher@efrei.net>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.3"
pandas = "^1.1.5"
xgboost = "^1.5.0"
Sphinx = "^4.3.0"
mlflow = "^1.21.0"
shap = "^0.40.0"
bokeh = "^2.4.2"
joblib = "^1.1.0"
sklearn = "^0.0"




[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
